welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
          if ((Math.abs(a-b))%10 = 1){
                             ^