welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
          if ((Math.abs(a-b))%10 = 1){
          	return true;
          }else{
          	return false;
          }
}





//if ( a == b){
	//	return true;
	//}
    // if ( Math.abs(a-b)%10 == 1){
	//		return true;
    // }
	///		
	//if ( (Math.abs(a-b) % 10) > 1){
	//		return true;
   //  }else{
	//	  return false;	
	//	  }
	